# django-entra-auth

./: .gitignore  CONTRIBUTING.rst  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs_deploy.yml  publish_to_pypi.yml  testing.yml
demo/adfs/mysite/: settings.py  urls.py
demo/adfs/templates/: base.html
django_entra_auth/: backend.py  config.py  drf_urls.py  middleware.py  rest_framework.py  urls.py  views.py
django_entra_auth/templates/django_entra_auth/: login_failed.html
docs/: Makefile  adfs_3.0_config_guide.rst  adfs_4.0_config_guide.rst  azure_ad_config_guide.rst  conf.py  config_guides.rst  credits.rst  demo.rst  faq.rst  index.rst  install.rst  make.bat  middleware.rst  oauth2_explained.rst  rest_framework.rst  settings_ref.rst  signals.rst  token_lifecycle.rst  troubleshooting.rst
tests/: settings.py  test_authentication.py  test_drf_integration.py  test_middleware.py  test_settings.py  urls.py  utils.py
