[project]
name = "django-entra-auth"
version = "1.16.0"
description = "A Django authentication backend for Microsoft Entra ID"
authors = [{ name = "Tyler Woods", email = "tyler@tylermade.net" }]
requires-python = ">=3.9"
readme = "README.md"
license = "BSD-1-Clause"
license-files = ["LICENSE"]
maintainers = [
    { name = "Tyler Woods", email = "tyler@tylermade.net" },
]
keywords = [
    "django",
    "authentication",
    "entra",
    "azure",
    "oidc",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "django>=4.2",
    "requests",
    "urllib3",
    "cryptography",
    "PyJWT",
]

[project.urls]
Homepage = "https://github.com/tnware/django-entra-auth"
Repository = "https://github.com/tnware/django-entra-auth"
Documentation = "https://tnware.github.io/django-entra-auth"

[dependency-groups]
dev = [
    "responses",
    "mock",
    "coverage",
    "djangorestframework",
    "django-filter",
    "ruff>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
